2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #14143]
	* sysdeps/powerpc/bits/fenv.h (__fe_nomask_env): Remove declaration.
	(__fe_mask_env): Likewise.
	* sysdeps/powerpc/fpu/fenv_libc.h (__fe_nomask_env): Remove
	libm_hidden_proto and add function prototype.
	(__fe_mask_env): Add function prototype.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/fe_nomask.c
	(__fe_nomask_env): Add compat symbol for GLIBC_2.1.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_mask.c
	(__fe_mask_env): Remove compiler warnings regarding ununsed variables.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_nomask.c
	(__fe_nomask_env): Add compat symbol for GLIBC_2.3.

2014-01-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16430]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c
	(__GI___gettimeofday): Alias for a different internal symbol to avoid
	local calls issues by not having a PLT stub required for IFUNC calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (__GI_time): Likewise.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* NEWS: Mention powerpc64le support and bugs fixed.
	* README: Both big-endian and little-endian powerpc64 supported.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* libc-abis: PowerPC64le has ifunc too.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* sysdeps/unix/sysv/linux/powerpc/configure.in (arch_minimum_kernel):
	Set for powerpc*le.
	* sysdeps/unix/sysv/linux/powerpc/configure: Regenerate.

2013-11-16  Alan Modra  <amodra@gmail.com>

	[BZ #5268]
	* include/gmp.h (__mpn_extract_double, __mpn_extract_long_double):
	Update prototypes.
	* stdio-common/printf_fp.c: Likewise.
	(__printf_fp): Use returned zero_bits.
	* stdlib/dbl2mpn.c (__mpn_extract_double): Update funtion arguments.
	* sysdeps/i386/ldbl2mpn.c (__mpn_extract_long_double): Don't perform
	shifts for denormals here.  Instead return leading zero bit count
	and adjust return value of function.